--- a/index.html
+++ b/index.html
@@ -256,6 +256,44 @@
             .founder-text h2 { font-size: 1.8rem !important; }
             .form-row, .requirements-grid { grid-template-columns: 1fr !important; }
         }
+/* --- SPECIFIC MOBILE FIX FOR ARABIC SECTION --- */
+@media (max-width: 992px) {
+    /* 1. Force Header to stay full width and visible */
+    header {
+        width: 100% !important;
+        left: 0 !important;
+        padding: 0 5% !important;
+    }
+    
+    /* 2. Fix the Founder Section Stacking */
+    .about-founder-flex {
+        display: flex !important;
+        flex-direction: column !important; /* Forces text below image */
+        align-items: center !important;
+    }
+
+    /* 3. Force Arabic Text to be visible and right-aligned on mobile */
+    body.rtl .about-founder-flex {
+        flex-direction: column !important;
+    }
+
+    body.rtl .founder-text {
+        width: 100% !important;
+        display: block !important;
+        visibility: visible !important;
+        opacity: 1 !important;
+        text-align: right !important;
+        margin-top: 20px;
+    }
+
+    /* 4. Ensure image doesn't vanish or get too small */
+    .founder-img {
+        flex: 0 0 auto !important;
+        width: 100% !important;
+        max-width: 350px !important;
+        margin-bottom: 20px;
+    }
+}
     </style>
 </head>
 <body>
