--- a/index.html
+++ b/index.html
@@ -376,6 +376,37 @@
         display: block !important;
     }
 }
+/* --- FIXING TEXT OVERLAP & WRAPPING --- */
+@media (max-width: 992px) {
+    /* Target the list items in English */
+    body:not(.rtl) .about-list li {
+        display: flex !important;
+        flex-wrap: nowrap !important; /* Keep checkmark and text on same horizontal start */
+        align-items: flex-start !important; /* Keep checkmark at the top of the first line */
+        gap: 12px !important;
+        margin-bottom: 15px !important;
+        white-space: normal !important; /* This stops the text from sitting on top of itself */
+        word-break: break-word !important; /* Ensures long words don't break the layout */
+        text-align: left !important;
+    }
+
+    /* Target the list items in Arabic for the same wrap fix */
+    body.rtl .about-list li {
+        display: flex !important;
+        flex-wrap: nowrap !important;
+        align-items: flex-start !important;
+        gap: 12px !important;
+        white-space: normal !important;
+        word-break: break-word !important;
+        text-align: right !important;
+    }
+
+    /* This gives the text room to breathe so it doesn't hit the screen edges */
+    .about-list li span, 
+    .about-list li {
+        line-height: 1.5 !important;
+    }
+}
     </style>
 </head>
 <body>
