--- a/index.html
+++ b/index.html
@@ -359,54 +359,51 @@
         text-align: left !important;
     }
 }
-/* --- FIXING THE CHECKMARK LIST ALIGNMENT FOR ENGLISH --- */
+/* --- THE ULTIMATE LIST FIX: NO MORE OVERLAPPING --- */
 @media (max-width: 992px) {
-    /* Target the list items only when NOT in Arabic mode */
-    body:not(.rtl) .about-list li {
-        text-align: left !important;
-        justify-content: flex-start !important; /* Moves the checkmark to the left */
-        display: flex !important;
-        align-items: flex-start !important; /* Keeps checkmark aligned with top of text */
-    }
-
-    /* Ensure the bullet points/ticks don't have weird centering margins */
-    body:not(.rtl) .about-list {
-        padding-left: 0 !important;
-        margin-left: 0 !important;
+    .about-list {
         display: block !important;
-    }
-}
-/* --- FIXING TEXT OVERLAP & WRAPPING --- */
-@media (max-width: 992px) {
-    /* Target the list items in English */
-    body:not(.rtl) .about-list li {
-        display: flex !important;
-        flex-wrap: nowrap !important; /* Keep checkmark and text on same horizontal start */
-        align-items: flex-start !important; /* Keep checkmark at the top of the first line */
-        gap: 12px !important;
-        margin-bottom: 15px !important;
-        white-space: normal !important; /* This stops the text from sitting on top of itself */
-        word-break: break-word !important; /* Ensures long words don't break the layout */
-        text-align: left !important;
+        width: 100% !important;
+        padding: 0 !important;
     }
 
-    /* Target the list items in Arabic for the same wrap fix */
-    body.rtl .about-list li {
-        display: flex !important;
-        flex-wrap: nowrap !important;
-        align-items: flex-start !important;
-        gap: 12px !important;
-        white-space: normal !important;
-        word-break: break-word !important;
-        text-align: right !important;
-    }
-
-    /* This gives the text room to breathe so it doesn't hit the screen edges */
-    .about-list li span, 
     .about-list li {
-        line-height: 1.5 !important;
+        display: grid !important;
+        /* Create 2 lanes: 30px for the tick, and 'auto' for all the text */
+        grid-template-columns: 30px auto !important;
+        gap: 10px !important;
+        align-items: start !important;
+        margin-bottom: 15px !important;
+        width: 100% !important;
+        white-space: normal !important; /* Forces normal text flow */
+    }
+
+    /* English Fix */
+    body:not(.rtl) .about-list li {
+        text-align: left !important;
+        direction: ltr !important;
+    }
+
+    /* Arabic Fix */
+    body.rtl .about-list li {
+        grid-template-columns: auto 30px !important; /* Swap lanes for Arabic */
+        text-align: right !important;
+        direction: rtl !important;
+    }
+
+    /* This ensures the checkmark (::before) stays in its own lane */
+    .about-list li::before {
+        content: '✓' !important;
+        display: block !important;
+        grid-column: 1 / 2; /* Put tick in lane 1 */
+        text-align: center;
+    }
+
+    body.rtl .about-list li::before {
+        grid-column: 2 / 3; /* Put tick in lane 2 for Arabic */
     }
 }
+
     </style>
 </head>
 <body>
