--- a/index.html
+++ b/index.html
@@ -359,49 +359,49 @@
         text-align: left !important;
     }
 }
-/* --- THE ULTIMATE LIST FIX: NO MORE OVERLAPPING --- */
+/* --- THE FINAL LIST ALIGNMENT FIX --- */
 @media (max-width: 992px) {
     .about-list {
         display: block !important;
         width: 100% !important;
         padding: 0 !important;
+        margin: 20px 0 !important;
     }
 
     .about-list li {
         display: grid !important;
-        /* Create 2 lanes: 30px for the tick, and 'auto' for all the text */
-        grid-template-columns: 30px auto !important;
-        gap: 10px !important;
-        align-items: start !important;
+        gap: 15px !important;
+        align-items: start !important; /* Keeps checkmark at the top line */
         margin-bottom: 15px !important;
         width: 100% !important;
-        white-space: normal !important; /* Forces normal text flow */
+        white-space: normal !important;
     }
 
-    /* English Fix */
+    /* English Layout: Checkmark (30px) | Text (Remaining Space) */
     body:not(.rtl) .about-list li {
+        grid-template-columns: 30px 1fr !important; 
         text-align: left !important;
         direction: ltr !important;
     }
 
-    /* Arabic Fix */
+    /* Arabic Layout: Text (Remaining Space) | Checkmark (30px) */
     body.rtl .about-list li {
-        grid-template-columns: auto 30px !important; /* Swap lanes for Arabic */
+        grid-template-columns: 1fr 30px !important; 
         text-align: right !important;
         direction: rtl !important;
     }
 
-    /* This ensures the checkmark (::before) stays in its own lane */
     .about-list li::before {
         content: '✓' !important;
+        color: var(--gold);
+        font-weight: bold;
         display: block !important;
-        grid-column: 1 / 2; /* Put tick in lane 1 */
-        text-align: center;
+        margin-top: 2px; /* Pulls checkmark down slightly to line up with text center */
     }
 
-    body.rtl .about-list li::before {
-        grid-column: 2 / 3; /* Put tick in lane 2 for Arabic */
-    }
+    /* Column Placement */
+    body:not(.rtl) .about-list li::before { grid-column: 1; }
+    body.rtl .about-list li::before { grid-column: 2; }
 }
 
     </style>
