--- a/index.html
+++ b/index.html
@@ -359,51 +359,56 @@
         text-align: left !important;
     }
 }
-/* --- THE FINAL LIST ALIGNMENT FIX --- */
+/* --- THE ULTIMATE RESET FOR MOBILE LISTS --- */
 @media (max-width: 992px) {
-    .about-list {
+    /* Reset the container */
+    ul.about-list {
         display: block !important;
         width: 100% !important;
         padding: 0 !important;
-        margin: 20px 0 !important;
+        margin: 25px 0 !important;
+        list-style: none !important;
     }
 
-    .about-list li {
+    /* Reset the items */
+    ul.about-list li {
         display: grid !important;
-        gap: 15px !important;
-        align-items: start !important; /* Keeps checkmark at the top line */
-        margin-bottom: 15px !important;
+        align-items: start !important;
+        margin-bottom: 18px !important;
         width: 100% !important;
         white-space: normal !important;
+        line-height: 1.4 !important;
+        background: none !important;
     }
 
-    /* English Layout: Checkmark (30px) | Text (Remaining Space) */
-    body:not(.rtl) .about-list li {
-        grid-template-columns: 30px 1fr !important; 
+    /* Lane setup for English (Tick | Text) */
+    body:not(.rtl) ul.about-list li {
+        grid-template-columns: 25px 1fr !important;
         text-align: left !important;
         direction: ltr !important;
     }
 
-    /* Arabic Layout: Text (Remaining Space) | Checkmark (30px) */
-    body.rtl .about-list li {
-        grid-template-columns: 1fr 30px !important; 
+    /* Lane setup for Arabic (Text | Tick) */
+    body.rtl ul.about-list li {
+        grid-template-columns: 1fr 25px !important;
         text-align: right !important;
         direction: rtl !important;
     }
 
-    .about-list li::before {
+    /* Force the checkmark to behave */
+    ul.about-list li::before {
         content: '✓' !important;
-        color: var(--gold);
-        font-weight: bold;
-        display: block !important;
-        margin-top: 2px; /* Pulls checkmark down slightly to line up with text center */
+        color: var(--gold) !important;
+        font-weight: 900 !important;
+        display: inline-block !important;
+        width: auto !important;
+        margin: 0 !important;
     }
 
-    /* Column Placement */
-    body:not(.rtl) .about-list li::before { grid-column: 1; }
-    body.rtl .about-list li::before { grid-column: 2; }
+    /* Position the checkmark in the correct lane */
+    body:not(.rtl) ul.about-list li::before { grid-column: 1 !important; }
+    body.rtl ul.about-list li::before { grid-column: 2 !important; }
 }
-
     </style>
 </head>
 <body>
