--- a/index.html
+++ b/index.html
@@ -359,56 +359,96 @@
         text-align: left !important;
     }
 }
-/* --- THE ULTIMATE RESET FOR MOBILE LISTS --- */
-@media (max-width: 992px) {
-    /* Reset the container */
-    ul.about-list {
-        display: block !important;
-        width: 100% !important;
-        padding: 0 !important;
-        margin: 25px 0 !important;
-        list-style: none !important;
-    }
+/* --- ALL-IN-ONE MOBILE FIXES --- */
+        @media (max-width: 992px) {
+            /* 1. HEADER FIX (Centered Logo + Swipeable Menu) */
+            header {
+                flex-direction: column !important; 
+                height: auto !important;
+                padding: 10px 0 0 0 !important; 
+                position: fixed !important;
+                align-items: center !important;
+            }
+            .header-left { justify-content: center !important; width: 100% !important; margin-bottom: 5px; }
+            .header-center {
+                width: 100% !important;
+                overflow-x: auto !important; 
+                white-space: nowrap !important;
+                -webkit-overflow-scrolling: touch; 
+                padding: 15px 20px !important;
+                border-top: 1px solid #222;
+                display: block !important;
+            }
+            .header-center::-webkit-scrollbar { display: none; }
+            .nav-links {
+                display: flex !important;
+                flex-direction: row !important; 
+                gap: 25px !important; 
+                width: max-content !important;
+            }
+            .nav-links a { font-size: 0.9rem !important; }
+            .logo img { height: 70px !important; }
+            .header-right { position: absolute; top: 20px; right: 15px; }
+            body.rtl .header-right { right: auto; left: 15px; }
 
-    /* Reset the items */
-    ul.about-list li {
-        display: grid !important;
-        align-items: start !important;
-        margin-bottom: 18px !important;
-        width: 100% !important;
-        white-space: normal !important;
-        line-height: 1.4 !important;
-        background: none !important;
-    }
+            /* 2. FOUNDER SECTION FIX (Stacking + Visibility) */
+            .about-founder-flex { 
+                display: flex !important;
+                flex-direction: column !important; 
+                align-items: center !important; 
+            }
+            .founder-img { width: 100% !important; max-width: 350px !important; margin-bottom: 25px !important; }
+            .founder-text { width: 100% !important; display: block !important; }
 
-    /* Lane setup for English (Tick | Text) */
-    body:not(.rtl) ul.about-list li {
-        grid-template-columns: 25px 1fr !important;
-        text-align: left !important;
-        direction: ltr !important;
-    }
+            /* 3. THE "NUCLEAR" LIST FIX (Checkmarks & Wrapping) */
+            ul.about-list {
+                display: block !important;
+                width: 100% !important;
+                padding: 0 !important;
+                margin: 25px 0 !important;
+                list-style: none !important;
+            }
+            ul.about-list li {
+                display: grid !important;
+                align-items: start !important;
+                margin-bottom: 18px !important;
+                width: 100% !important;
+                white-space: normal !important;
+                line-height: 1.6 !important;
+            }
+            /* English Lane Setup */
+            body:not(.rtl) ul.about-list li {
+                grid-template-columns: 30px 1fr !important;
+                text-align: left !important;
+            }
+            /* Arabic Lane Setup */
+            body.rtl ul.about-list li {
+                grid-template-columns: 1fr 30px !important;
+                text-align: right !important;
+            }
+            ul.about-list li::before {
+                content: '✓' !important;
+                color: var(--gold) !important;
+                font-weight: bold !important;
+                display: block !important;
+            }
+            body:not(.rtl) ul.about-list li::before { grid-column: 1 !important; }
+            body.rtl ul.about-list li::before { grid-column: 2 !important; }
 
-    /* Lane setup for Arabic (Text | Tick) */
-    body.rtl ul.about-list li {
-        grid-template-columns: 1fr 25px !important;
-        text-align: right !important;
-        direction: rtl !important;
-    }
+            /* 4. ALIGNMENT OVERRIDES */
+            body:not(.rtl) .founder-text, 
+            body:not(.rtl) .founder-text h2, 
+            body:not(.rtl) .founder-text p {
+                text-align: left !important;
+            }
+            body.rtl .founder-text, 
+            body.rtl .founder-text h2, 
+            body.rtl .founder-text p {
+                text-align: right !important;
+            }
+        }
+    </style>
 
-    /* Force the checkmark to behave */
-    ul.about-list li::before {
-        content: '✓' !important;
-        color: var(--gold) !important;
-        font-weight: 900 !important;
-        display: inline-block !important;
-        width: auto !important;
-        margin: 0 !important;
-    }
-
-    /* Position the checkmark in the correct lane */
-    body:not(.rtl) ul.about-list li::before { grid-column: 1 !important; }
-    body.rtl ul.about-list li::before { grid-column: 2 !important; }
-}
     </style>
 </head>
 <body>
