--- a/index.html
+++ b/index.html
@@ -299,7 +299,7 @@
     header {
         flex-direction: column !important; /* Stack logo above the menu */
         height: auto !important;
-        padding: 5px 0 !important;
+        padding: 10px 0 5px 0 !important;
     }
 
     .header-center {
@@ -327,7 +327,7 @@
     }
 
     .logo img {
-        height: 80px !important; /* Decent size logo */
+        height: 90px !important; /* Decent size logo */
         margin-bottom: 2px;
     }
 
@@ -731,6 +731,7 @@
 </script>
 </body>
 </html>
+
 
 
 
