--- a/index.html
+++ b/index.html
@@ -307,8 +307,8 @@
         overflow-x: auto; /* Allows swiping left/right */
         white-space: nowrap;
         -webkit-overflow-scrolling: touch; /* Smooth swiping on iPhone */
-        padding: 10px 20px;
-        border-top: 1px solid #222; /* Separates logo from links */
+        padding: 10px 0 5px 0;
+        border-top: 0.5px solid #222; /* Separates logo from links */
     }
 
     /* Hide the scrollbar but keep it scrollable */
@@ -328,7 +328,7 @@
 
     .logo img {
         height: 90px !important; /* Decent size logo */
-        margin-bottom: 2px;
+        margin-bottom: 0px;
     }
 
     .header-right {
@@ -731,6 +731,7 @@
 </script>
 </body>
 </html>
+
 
 
 
