--- a/index.html
+++ b/index.html
@@ -298,8 +298,8 @@
 @media (max-width: 992px) {
     header {
         flex-direction: column !important; /* Stack logo above the menu */
-        height: auto !important;
-        padding: 10px 0 5px 0 !important;
+        height: 100px !important;
+        padding: 5px !important;
     }
 
     .header-center {
@@ -307,7 +307,7 @@
         overflow-x: auto; /* Allows swiping left/right */
         white-space: nowrap;
         -webkit-overflow-scrolling: touch; /* Smooth swiping on iPhone */
-        padding: 10px 0 5px 0;
+        padding: 10px;
         border-top: 0.5px solid #222; /* Separates logo from links */
     }
 
@@ -328,7 +328,7 @@
 
     .logo img {
         height: 90px !important; /* Decent size logo */
-        margin-bottom: 0px;
+        margin-bottom: 5px;
     }
 
     .header-right {
@@ -731,6 +731,7 @@
 </script>
 </body>
 </html>
+
 
 
 
