--- a/index.html
+++ b/index.html
@@ -298,8 +298,8 @@
 @media (max-width: 992px) {
     header {
         flex-direction: column !important; /* Stack logo above the menu */
-        height: 100px !important;
-        padding: 5px !important;
+        height: auto !important;
+        padding: 10px 20px !important;
     }
 
     .header-center {
@@ -308,7 +308,7 @@
         white-space: nowrap;
         -webkit-overflow-scrolling: touch; /* Smooth swiping on iPhone */
         padding: 10px;
-        border-top: 0.5px solid #222; /* Separates logo from links */
+        border-top: 1px solid #222; /* Separates logo from links */
     }
 
     /* Hide the scrollbar but keep it scrollable */
@@ -327,8 +327,8 @@
     }
 
     .logo img {
-        height: 90px !important; /* Decent size logo */
-        margin-bottom: 5px;
+        height: 100px !important; /* Decent size logo */
+        margin-bottom: 2px;
     }
 
     .header-right {
@@ -731,6 +731,7 @@
 </script>
 </body>
 </html>
+
 
 
 
